[package]
name = "sprout-helper"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to create class materials, written in Rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
